project2/test/test_2_b03.out
Error type 5 at Line 29: unmatching types on both sides of assignment operator (=)
